Revision history for SWISH-Prog-Lucy

0.21 xxx
 - add 'id' attribute to Searcher, Results, Result

0.20 02 March 2014
 - check for undef query returned by Search::Query::Parser

0.19 13 Dec 2013
 - fix tests for change in SWISH::Prog 0.75

0.18 4 Oct 2013
 - packaging clean up 
 - bump dependency on LucyX::Search::WildcardQuery 

0.17 12 Feb 2013
 - fix bug in dynamically-added PropertyNames where sortable flag was not
   turned on.

0.16 12 Feb 2013
 - support UndefinedMetaTags 'autoall' for adding PropertyNames as well as 
   MetaNames dynamically. Requires SWISH::3 1.000006.

0.15 10 Feb 2013
 - refactored internal initialization of query parser, adding qp_config
   option to constructor. This should solve the issue when
   UndefinedMetaTags is set to 'auto' in the Indexer, and additional fields
   are added to an existing index.

0.14 04 Feb 2013
 - include built-in swish* properties as search-able fields.

0.13 30 Jan 2013
 - add Searcher->nfs_mode so that manager logic is optional. Feature has
   been in there since 0.08 but not needed unless we are running under NFS.

0.12 29 Nov 2012
 - support stale searcher detection when multiple indexes are being
   searched.

0.11 3 Sept 2012
 - refer to header meta file internally using official API method
 - added Indexer->abort method

0.10 23 Aug 2012
 - croak_on_error => 1 in Search::Query::Parser means invalid queries now
   generate an exception in Searcher.
 - Result->score will always return a positive integer (score || 1)

0.09 28 July 2012
 - add property_map to respect PropertyNameAlias params in get_property()
 - fix MANIFEST to include missing Module::Install files

0.08 19 July 2012
 - bump dependencies
 - switch to Module::Install
 - include bin/lucyx-dump-terms example script
 - add dependency on Sys::Hostname, to support indexes on NFS shares.

0.07 13 Oct 2011
 - expose qp() attribute as part of public API.
 - add get_propnames() method to Searcher.

0.06 11 Oct 2011