@@ -35,6 +35,7 @@ while ( ++$passes < 4 ) {
     $program->config->FileRules( 'dirname is index.swish',               1 );
     $program->config->FileRules( 'filename is config.xml',               1 );
     $program->config->FileRules( 'filename is config-nostemmer.xml',     1 );
+    $program->config->FileRules( 'filename is fields.xml',               1 );
     $program->config->FileRules( 'filename contains \.t',                1 );
     $program->config->FileRules( 'dirname contains (testindex|\.index)', 1 );
     $program->config->FileRules( 'filename contains \.conf',             1 );
