@@ -1,7 +1,7 @@
 #!/usr/bin/env perl
 use strict;
 use warnings;
-use Test::More tests => 19;
+use Test::More tests => 15;
 use strict;
 use Data::Dump qw( dump );
 use Search::Tools::UTF8;
@@ -20,12 +20,11 @@ ok( my $invindex = SWISH::Prog::Lucy::InvIndex->new(
     "new invindex"
 );
 
-# no stemming
 my $program = make_program();
 
 ok( $program->index('t/'), "run program" );
 
-is( $program->count, 2, "indexed test docs" );
+is( $program->count, 1, "indexed test docs" );
 
 ok( my $searcher = SWISH::Prog::Lucy::Searcher->new(
         invindex             => 't/index.swish',
@@ -34,51 +33,39 @@ ok( my $searcher = SWISH::Prog::Lucy::Searcher->new(
     "new searcher"
 );
 
-ok( my $results = $searcher->search('appl'), "search()" );
+# case-sensitive search
+ok( my $results = $searcher->search('GLOWER'), "search()" );
 
 #diag( dump $results );
 
-is( $results->hits, 0, "0 hits for stem when stemming is off" );
-
-# with stemming
-$invindex->path->rmtree();
-ok( $invindex = SWISH::Prog::Lucy::InvIndex->new(
-        clobber => 0,                 # Lucy handles this
-        path    => 't/index.swish',
-    ),
-    "new invindex"
-);
-$program = make_program(1);
-
-ok( $program->index('t/'), "run program" );
-
-is( $program->count, 2, "indexed test docs" );
-
-ok( $searcher = SWISH::Prog::Lucy::Searcher->new(
-        invindex             => 't/index.swish',
-        find_relevant_fields => 1,
-    ),
-    "new searcher"
-);
-
-ok( $results = $searcher->search('appl'), "search()" );
-
-#diag( dump $results );
-
-is( $results->hits, 1, "1 hit for stem when stemming is on" );
+is( $results->hits, 1, "1 hit" );
 
 ok( my $result = $results->next, "next result" );
 
-is( $result->uri, 't/test.html', 'get uri' );
+#diag( dump $result->property_map );
+
+is( $result->uri, 't/fields.xml', 'get uri' );
+
+is( $result->relevant_fields->[0],
+    "tokenizecasesensitive", "relevant field == tokenizecasesensitive" );
+
+# test partial match against stored-only field
+#diag( dump $searcher );
+ok( $results = $searcher->search('bar:small'),
+    "search in non-tokenized field" );
+is( $results->hits, 0, "no hits" );
+
+#show_results_by_uri($results);
+
+###################################
+## helper functions
 
 sub make_program {
-    my $use_stemmer = shift;
     ok( my $program = SWISH::Prog->new(
-            invindex   => $invindex,
-            aggregator => 'fs',
-            indexer    => 'lucy',
-            config =>
-                ( $use_stemmer ? 't/config.xml' : 't/config-nostemmer.xml' ),
+            invindex     => $invindex,
+            aggregator   => 'fs',
+            indexer      => 'lucy',
+            config       => 't/fields.conf',
             indexer_opts => { highlightable_fields => 1, },
 
             #verbose    => 1,
@@ -91,9 +78,10 @@ sub make_program {
     # the '1' arg indicates to append the value, not replace.
     $program->config->FileRules( 'dirname is index.swish',               1 );
     $program->config->FileRules( 'filename is config.xml',               1 );
-    $program->config->FileRules( 'filename is fields.xml',               1 );
     $program->config->FileRules( 'filename is config-nostemmer.xml',     1 );
     $program->config->FileRules( 'filename contains \.t',                1 );
+    $program->config->FileRules( 'filename is test.html',                1 );
+    $program->config->FileRules( 'filename is test.xml',                 1 );
     $program->config->FileRules( 'dirname contains (testindex|\.index)', 1 );
     $program->config->FileRules( 'filename contains \.conf',             1 );
     $program->config->FileRules( 'dirname contains mailfs',              1 );
@@ -101,13 +89,15 @@ sub make_program {
     return $program;
 }
 
+sub show_results_by_uri {
+    my ($results) = @_;
+    while ( my $r = $results->next ) {
+        diag( $r->uri );
+    }
+}
+
 END {
     unless ( $ENV{PERL_DEBUG} ) {
-        undef $searcher;
-        undef $results;
-        undef $result;
-        my $index = $invindex->path;
-        undef $invindex;
-        $index->rmtree;
+        $invindex->path->rmtree;
     }
 }
