@@ -1,0 +1,4 @@
+MetaNames foo bing tokenizecasesensitive
+PropertyNames bar
+PropertyNamesIgnoreCase bing storecaseinsensitive
+PropertyNamesCompareCase tokenizecasesensitive
